welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:11: error: not found: value to
		case 10 to 20 => return Math.max(a, b);
                        ^